--- a/style.css
+++ b/style.css
@@ -1,13 +1,27 @@
-.container{
-
-    display: flex;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; 
 }
 
-.cells{
-    flex-direction: row;
-    width: 50px;
-    height: 25px;   
-    border: 2px;
-    
-    background: black;
+#container {
+    display: flex;
+    flex-wrap: wrap; 
+    width: 600px; 
+    height: 600px; 
+    border: 2px solid black;
+    margin: 0 auto; 
+}
+
+
+.cell {
+    flex: 1 0 calc(100% / 4); 
+    height: calc(600px / 4); 
+    border: 1px solid black; 
+    background-color: white; 
+}
+
+
+.cell:hover {
+    background-color: black; 
 }
